src/ingress/tekton-dashboard.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard-server
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: tekton-dev.owill.com.br
      http:
        paths:
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
    
    - host: tekton-dev.owill.com.br
      http:
        paths:
          - path: /pipeline
            pathType: Prefix
            backend:
              service:
                name: tekton-pipeline
                port:
                  number: 8080
