src/ingress/tekton-pipeline-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-pipeline-server
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: tekton-dev.owill.com.br
      http:
        paths:
          - path: /pipeline/pull-request
            pathType: Prefix
            backend:
              service:
                name: el-github-pull-request
                port:
                  number: 8080
