src/ingress/tekton-pipelines.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-pipelines-server
  namespace: tekton-pipelines
  annotations:
    konghq.com/https-redirect-status-code: '302'
    kubernetes.io/ingress.class: kong
    konghq.com/protocols: https
    konghq.com/strip-path: 'true'
spec:
  rules:
    - host: tekton-pipelines.vcarrazzone.com.br
      http:
        paths:
          - path: /pullrequest
            pathType: Prefix
            backend:
              service:
                name: el-github-pull-request
                port:
                  number: 8080
